--- a/assets/css/index-our-team.css
+++ b/assets/css/index-our-team.css
@@ -113,7 +113,7 @@
 .u-section-2 .u-image-1 {
   width: 290px;
   height: 290px;
-  background-image: url("./images/Saran.png");
+  background-image: url("../images/Saran.png");
   background-position: 50% 50%;
   margin: 0 auto;
 }
@@ -136,7 +136,7 @@
 .u-section-2 .u-image-2 {
   width: 290px;
   height: 290px;
-  background-image: url("./images/Sachu.jpg");
+  background-image: url("../images/Sachu.jpg");
   background-position: 50% 50%;
   margin: 0 auto;
 }
@@ -259,7 +259,7 @@
 .u-section-3 .u-image-1 {
   width: 213px;
   height: 213px;
-  background-image: url("./images/Saran.png");
+  background-image: url("../images/Saran.png");
   background-position: 50% 50%;
   margin: -95px auto 0;
 }
@@ -477,7 +477,7 @@
 .u-section-4 .u-image-1 {
   width: 213px;
   height: 213px;
-  background-image: url("./images/Sachu.jpg");
+  background-image: url("../images/Sachu.jpg");
   background-position: 50% 50%;
   margin: -95px auto 0;
 }
@@ -675,5 +675,5 @@
   font-family: 'Gauge-Heavy';
   font-style: normal;
   font-weight: 400;
-  src: url(./fonts/Gauge-Heavy.otf);
+  src: url(../fonts/Gauge-Heavy.otf);
 }
