--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -20,7 +20,7 @@
 .u-section-1 .u-image-1 {
   width: 501px;
   height: 501px;
-  background-image: url("./images/Hori-Bot.jpg");
+  background-image: url(../images/Hori-Bot.jpg);
   background-position: 50% 50%;
   --animation-custom_in-translate_x: -300px;
   --animation-custom_in-translate_y: -300px;
@@ -34,7 +34,7 @@
 .u-section-1 .u-image-2 {
   width: 223px;
   height: 223px;
-  background-image: url("./images/Sachu.jpg");
+  background-image: url("../images/Sachu.jpg");
   background-position: 50% 50%;
   --animation-custom_in-translate_x: 50px;
   --animation-custom_in-translate_y: 0px;
@@ -47,7 +47,7 @@
 .u-section-1 .u-image-3 {
   width: 203px;
   height: 203px;
-  background-image: url("./images/Saran.png");
+  background-image: url("../images/Saran.png");
   background-position: 50% 50%;
   --animation-custom_in-translate_x: 300px;
   --animation-custom_in-translate_y: 300px;
@@ -66,7 +66,6 @@
   --animation-custom_in-rotate: 0deg;
   --animation-custom_in-scale: 1;
   background-image: none;
-  height: auto;
   margin: 102px 10px 0 auto;
 }
 
@@ -116,31 +115,30 @@
   }
 
   .u-section-1 .u-shape-1 {
-    margin-top: 354px;
-    margin-right: 49px;
+    margin-top: 324px;
+    margin-right: 64px;
     margin-left: auto;
   }
 
   .u-section-1 .u-image-1 {
-    margin-top: -461px;
+    margin-top: -431px;
     margin-left: auto;
   }
 
   .u-section-1 .u-image-2 {
-    margin-top: -40px;
-    margin-left: 184px;
+    margin-top: -83px;
+    margin-left: 173px;
   }
 
   .u-section-1 .u-image-3 {
-    margin-top: -414px;
+    margin-top: -371px;
     margin-right: auto;
     margin-left: 68px;
   }
 
   .u-section-1 .u-group-1 {
-    margin-top: 127px;
+    margin-top: 113px;
     margin-right: 0;
-    height: auto;
   }
 
   .u-section-1 .u-btn-1 {
@@ -148,7 +146,7 @@
   }
 
   .u-section-1 .u-shape-2 {
-    margin-top: -949px;
+    margin-top: -935px;
     margin-left: 0;
   }
 }
@@ -316,8 +314,8 @@
     --animation-custom_in-translate_x: -300px;
     width: 107px;
     height: 107px;
-    margin-top: -929px;
-    margin-left: 0;
+    margin-top: -881px;
+    margin-left: -13px;
   }
 } .u-section-2 {
   background-image: none;
@@ -333,24 +331,24 @@
   --animation-custom_in-translate_x: 0px;
   --animation-custom_in-scale: 1;
   --animation-custom_in-translate_y: 300px;
-  margin: 455px auto 0 350px;
+  margin: 457px auto 0 310px;
 }
 
 .u-section-2 .u-image-1 {
   width: 448px;
   height: 448px;
-  background-image: url("./images/Sachu.jpg");
+  background-image: url("../images/Sachu.jpg");
   background-position: 50% 50%;
   --animation-custom_in-translate_x: 0px;
   --animation-custom_in-scale: 1;
   --animation-custom_in-translate_y: -300px;
-  margin: -688px auto 0 101px;
+  margin: -690px auto 0 101px;
 }
 
 .u-section-2 .u-image-2 {
   width: 207px;
   height: 207px;
-  background-image: url("./images/Hori-Bot.jpg");
+  background-image: url("../images/Hori-Bot.jpg");
   background-position: 50% 50%;
   --animation-custom_in-translate_y: 250px;
   --animation-custom_in-scale: 1;
@@ -381,25 +379,25 @@
 }
 
 .u-section-2 .u-group-1 {
-  min-height: 392px;
-  width: 514px;
+  min-height: 361px;
+  width: 570px;
   background-image: none;
   --animation-custom_in-translate_x: 300px;
   --animation-custom_in-translate_y: 300px;
   --animation-custom_in-opacity: 0;
   --animation-custom_in-rotate: 0deg;
   --animation-custom_in-scale: 1;
-  margin: 57px 0 17px auto;
+  margin: 57px 0 48px auto;
 }
 
 .u-section-2 .u-container-layout-1 {
-  padding: 20px 50px 30px;
+  padding: 20px 50px 25px;
 }
 
 .u-section-2 .u-text-1 {
   font-size: 3rem;
   font-family: Gauge-Heavy;
-  margin: 0;
+  margin: 14px 0 0;
 }
 
 .u-section-2 .u-text-2 {
@@ -413,7 +411,7 @@
   align-self: center;
   text-transform: uppercase;
   font-weight: 700;
-  margin: 66px auto 0;
+  margin: 21px auto 0;
   padding: 12px 52px 13px 51px;
 }
 
@@ -453,7 +451,9 @@
   }
 
   .u-section-2 .u-group-1 {
-    margin-top: 84px;
+    width: 470px;
+    margin-top: 142px;
+    margin-bottom: 53px;
   }
 
   .u-section-2 .u-text-1 {
@@ -471,7 +471,7 @@
 
 @media (max-width: 991px) {
   .u-section-2 .u-sheet-1 {
-    min-height: 1290px;
+    min-height: 1235px;
   }
 
   .u-section-2 .u-shape-1 {
@@ -481,7 +481,7 @@
   }
 
   .u-section-2 .u-image-1 {
-    margin-top: -688px;
+    margin-top: -690px;
     margin-left: auto;
   }
 
@@ -502,9 +502,9 @@
   }
 
   .u-section-2 .u-group-1 {
-    min-height: 458px;
+    min-height: 378px;
     margin-top: 95px;
-    margin-bottom: 43px;
+    margin-bottom: 60px;
     margin-right: initial;
     margin-left: initial;
     width: auto;
@@ -553,6 +553,7 @@
 
   .u-section-2 .u-group-1 {
     margin-top: 174px;
+    margin-bottom: 43px;
     width: auto;
     margin-right: initial;
     margin-left: initial;
@@ -586,20 +587,20 @@
   .u-section-2 .u-shape-2 {
     width: 99px;
     height: 99px;
-    margin-top: 129px;
-    margin-right: 60px;
+    margin-top: 135px;
+    margin-right: 0;
   }
 
   .u-section-2 .u-shape-3 {
     width: 159px;
-    margin-top: -162px;
+    margin-top: -220px;
     margin-left: 0;
   }
 
   .u-section-2 .u-group-1 {
-    min-height: 483px;
-    margin-top: 22px;
-    margin-bottom: 24px;
+    min-height: 401px;
+    margin-top: 74px;
+    margin-bottom: 60px;
     width: auto;
     margin-right: initial;
     margin-left: initial;
@@ -635,7 +636,7 @@
 .u-section-3 .u-image-1 {
   width: 448px;
   height: 448px;
-  background-image: url("./images/Saran.png");
+  background-image: url("../images/Saran.png");
   background-position: 50% 50%;
   --animation-custom_in-translate_x: -300px;
   --animation-custom_in-translate_y: -300px;
@@ -648,7 +649,7 @@
 .u-section-3 .u-image-2 {
   width: 207px;
   height: 207px;
-  background-image: url("./images/Hori-Bot.jpg");
+  background-image: url("../images/Hori-Bot.jpg");
   background-position: 50% 50%;
   --animation-custom_in-translate_x: -300px;
   --animation-custom_in-translate_y: 0px;
@@ -696,7 +697,7 @@
 }
 
 .u-section-3 .u-container-layout-1 {
-  padding: 13px 50px;
+  padding: 15px 50px 20px;
 }
 
 .u-section-3 .u-text-1 {
@@ -739,8 +740,8 @@
   }
 
   .u-section-3 .u-group-1 {
-    margin-top: 0;
-    margin-bottom: 17px;
+    margin-top: 40px;
+    margin-bottom: 37px;
   }
 
   .u-section-3 .u-btn-1 {
@@ -750,42 +751,41 @@
 
 @media (max-width: 991px) {
   .u-section-3 .u-sheet-1 {
-    min-height: 1201px;
+    min-height: 1254px;
   }
 
   .u-section-3 .u-shape-1 {
-    margin-top: 420px;
+    margin-top: 473px;
     margin-right: 15px;
   }
 
   .u-section-3 .u-image-1 {
-    margin-top: -653px;
+    margin-top: -533px;
     margin-left: auto;
   }
 
   .u-section-3 .u-image-2 {
-    margin-top: -79px;
+    margin-top: -165px;
     margin-left: 40px;
   }
 
   .u-section-3 .u-shape-2 {
-    margin-top: 17px;
+    margin-top: 40px;
     margin-left: 40px;
   }
 
   .u-section-3 .u-shape-3 {
-    margin-top: -712px;
+    margin-top: -672px;
     margin-right: 0;
   }
 
   .u-section-3 .u-shape-4 {
-    margin-top: 511px;
+    margin-top: 414px;
     margin-right: 285px;
   }
 
   .u-section-3 .u-group-1 {
     min-height: 340px;
-    margin-top: 40px;
     margin-bottom: 23px;
     margin-right: initial;
     margin-left: initial;
@@ -828,13 +828,13 @@
   .u-section-3 .u-shape-3 {
     width: 99px;
     height: 99px;
-    margin-top: -680px;
+    margin-top: -583px;
     margin-right: auto;
     margin-left: 0;
   }
 
   .u-section-3 .u-shape-4 {
-    margin-top: 570px;
+    margin-top: 473px;
     margin-left: 0;
   }
 
@@ -853,19 +853,20 @@
 
 @media (max-width: 575px) {
   .u-section-3 .u-sheet-1 {
-    min-height: 1409px;
+    min-height: 1270px;
   }
 
   .u-section-3 .u-shape-1 {
     width: 144px;
     height: 144px;
-    margin-top: 615px;
+    margin-top: 520px;
+    margin-right: 0;
   }
 
   .u-section-3 .u-image-1 {
     width: 340px;
     height: 340px;
-    margin-top: -661px;
+    margin-top: -566px;
   }
 
   .u-section-3 .u-image-2 {
@@ -873,20 +874,20 @@
   }
 
   .u-section-3 .u-shape-2 {
-    margin-top: 105px;
-    margin-left: 16px;
+    margin-top: 16px;
+    margin-left: 0;
   }
 
   .u-section-3 .u-shape-4 {
-    margin-top: -37px;
-    margin-right: 26px;
+    margin-top: -58px;
+    margin-right: 57px;
     margin-left: auto;
   }
 
   .u-section-3 .u-group-1 {
     min-height: 375px;
-    margin-top: 48px;
-    margin-bottom: 60px;
+    margin-top: 42px;
+    margin-bottom: 42px;
     width: auto;
     margin-right: initial;
     margin-left: initial;
@@ -972,5 +973,5 @@
   font-family: 'Gauge-Heavy';
   font-style: normal;
   font-weight: 400;
-  src: url(./fonts/Gauge-Heavy.otf);
+  src: url(../fonts/Gauge-Heavy.otf);
 }
